Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101782

lrelease does not respect EXTRA_TRANSLATIONS in pro file.

XMLWordPrintable

    • 2641698341 (qt/qttools/dev) 2c88d2f6b0 (qt/qttools/6.2) 468bf8d77e (qt/qttools/6.3) 2c88d2f6b0 (qt/tqtc-qttools/6.2) 468bf8d77e (qt/tqtc-qttools/6.3) 61039d4ba8 (qt/tqtc-qttools/5.15) 61039d4ba8 (qt/tqtc-qttools/5.15.10) 468bf8d77e (qt/qttools/6.3.1)

      run command 

      ```

      lrelease project.pro  

      ```

      does not generate translation files specified by EXTRA_TRANSLATIONS 

       

      see attached project.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtbuildsystem Qt Build System Team
            xiaoyifang yifang xiao
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes