lrelease-pro: Take EXTRA_TRANSLATIONS into account

The QMake variable EXTRA_TRANSLATIONS contains .ts files that are only
to be handled by lrelease but not lupdate.  Teach lrelease-pro to
understand this variable, but ignore it in lupdate-pro.

Fixes: QTBUG-101782
Pick-to: 5.15 6.2 6.3
Change-Id: I79e1c669480dc35dc61ecc149fe7ba1bba28ab29
Reviewed-by: Kai Koehne <kai.koehne@qt.io>