src/linguist/lrelease-pro/main.cpp
@@ -116,6 +116,9 @@ int main(int argc, char **argv)
         return 1;
     }
 
+    lprodumpOptions << QStringLiteral("-translations-variables")
+                    << QStringLiteral("TRANSLATIONS,EXTRA_TRANSLATIONS");
+
     const QStringList proFiles = extractProFiles(&inputFiles);
     if (proFiles.isEmpty()) {
         printErr(u"lrelease-pro: No .pro/.pri files given.\n"_qs);
